# DavaX

./: .gitignore  README.md
ETL_Homework/Project/: DavaX.sql  ETL_project_documentation.docx
ETL_Homework/Project/Source/Absences/: DavaX_Source_Absences.sql
Homework_Docker/: .gitignore  README.md  dockerfile  main.py
Homework_Docker/Homework_Kubernetes/: README.md  deployment.yaml  service.yaml
PL-SQL_Homework/: Suditu_Tiberiu_Gabriel_tema_Debug_Framework.sql
Python_Project/Python_MicroService_Project/: .flake8  .gitignore  README.md  main.py  requirements.txt  run_math_service.bat
Python_Project/Python_MicroService_Project/api/: routes.py
Python_Project/Python_MicroService_Project/db/: db.py  debug_db.py
Python_Project/Python_MicroService_Project/models/: request_model.py
Python_Project/Python_MicroService_Project/services/: factorial_service.py  fibonacci_service.py  pow_service.py
Python_Project/Python_MicroService_Project/templates/: factorial_form.html  fibonacci_form.html  index.html  pow_form.html
RDBMS_homework/: time_sheet_tiberiu_suditu.sql
db/: time_sheet_tiberiu_suditu.sql
smart_librarian/: README.md  pyproject.toml  requirements.txt  smart_librarian.bat
smart_librarian/scripts/: build_index.py
smart_librarian/smart_librarian/: main.py  rag.py  tooling.py  utils.py
smart_librarian/smart_librarian/data/: book_summaries_en.csv  book_summaries_en.md  book_summaries_full_en.json
smart_librarian/tests/: smoke_retrieval.py
smart_librarian/win_scripts/: build_index.bat  chat.bat  install.bat  setup_env.bat  smoke.bat
(+20 files in other folders)
