[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_librarian"
version = "0.1.0"
description = "RAG system for book summaries"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["smart_librarian*", "scripts*", "tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
smart_librarian = ["data/*.csv", "data/*.json", "data/*.md"]